# backpack-rs

rust/: Cargo.toml
rust/client/: Cargo.toml
rust/client/examples/: backpack_websockets.rs  test_websockets.rs
rust/client/src/: capital.rs  error.rs  lib.rs  markets.rs  order.rs  rest_model.rs  trades.rs  websocket.rs  websockets.rs  ws_model.rs
rust/types/: Cargo.toml
rust/types/src/: order.rs
